<resources>
    <string name="app_name">MunicipApp</string>
    <string name="intro_text">Together We Can</string>
    <string name="intro_title">Connecting</string>
    <string name="login_title">Login</string>
    <string name="preview_title">Preview Report</string>
    <string name="register_title">Register</string>
    <string name="my_report_title">My Reports</string>
    <string name="review_detailed_title">Details</string>
    <string name="review_report_title">Review</string>
    <string name="nav_general">General</string>
    <string name="nav_profile_settings">Profile Settings</string>
    <string name="nav_language">Language</string>
    <string name="nav_gr">Greek</string>
    <string name="nav_en">English</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_app">Application</string>
    <string name="nav_help">Instructions</string>
    <string name="nav_rep_app">Report a problem</string>
    <string name="password_prompt">Password</string>
    <string name="re_password_prompt">Retype password</string>
    <string name="password_old_prompt">Old password</string>
    <string name="username_prompt">Username</string>
    <string name="register_button">Register</string>
    <string name="old_pass_wrong">Incorrect Password</string>
    <string name="tab1">Description</string>
    <string name="tab2">Image</string>
    <string name="tab3">Location</string>
    <string name="Highest_score_in_single_report">Highest score in single report</string>
    <string name="Total_score_of_your_reports">Total score of your reports</string>
    <string name="num_1" translatable="false">1</string>
    <string name="num_2" translatable="false">2</string>
    <string name="num_3" translatable="false">3</string>
    <string name="num_4" translatable="false">4</string>
    <string name="num_5" translatable="false">5</string>
    <string name="num_6" translatable="false">6</string>
    <string name="num_7" translatable="false">7</string>
    <string name="num_8" translatable="false">8</string>
    <string name="num_9" translatable="false">9</string>
    <string name="num_10" translatable="false">10</string>
    <string name="swipe_to_load">Swipe down to load</string>
    <string name="enter_image_comment">Image Comment</string>
    <string name="settings_profile_name">Profile name</string>
    <string name="settings_email">Email</string>
    <string name="settings_dob">Date of Birth</string>
    <string name="day_hint">dd</string>
    <string name="month_hint">mm</string>
    <string name="year_hint">yyyy</string>
    <string name="slash" translatable="false">/</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="settings_facebook_error">Facebook data can not be changed</string>
    <string name="pass_change">Change Password</string>
    <string name="password_short">Password too short</string>
    <string name="password_match_err">Passwords doesn\'t match</string>
    <string name="password_empty">Change your password or press \'Change password\' again</string>
    <string name="password_re_empty">Please re-type password</string>
    <string name="app_id" translatable="false">670991353088179</string>
    <string-array name="map_types">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>None</item>
    </string-array>
    <string name="ask_for_review">Select method</string>
    <string name="ask_for_review_message">Select your wished Locality from current position or select it manually?</string>
    <string name="dialog_current_location">Current location</string>
    <string name="dialog_select_manually">Select it manually</string>
    <string name="progressbar_text">Locating your position…</string>
    <string name="main_screen_title">Home</string>
    <string name="locate_title">Locating your position</string>
    <string name="locate_message">Please wait…</string>
    <string name="imageloader_title">Report\'s Image</string>
    <string name="image_header_tv">\tUploading an image, will help us and other users to precisely
            identify the report\'s object \n\t You can skip this step by clicking \'SKIP\' button at
            the end of the screen</string>
    <string name="upload_image_tv">Upload Image</string>
    <string name="album_button" translatable="false">Select image from Gallery</string>
    <string name="camera_button" translatable="false">Open camera to take a picture</string>
    <string name="gallery_tv">Gallery</string>
    <string name="camera_tv">Camera</string>
    <string name="image">Image</string>
    <string name="image_skip_tv">Skip</string>
    <string name="report_category_title">Report\'s Description</string>
    <string name="report_category">Report\'s Category</string>
    <string name="report_category_et">Report\'s Category</string>
    <string name="report_category_et_hint">Select Category</string>
    <string name="report_type">Report\'s Type</string>
    <string name="report_type_et">Report\'s Type</string>
    <string name="report_type_et_hint">Select Type</string>
    <string name="select_report_button">Proceed</string>
    <string name="description">Report\'s description</string>
    <string name="description_et_hint">Description</string>
    <string name="map_type">Map type</string>
    <string name="image_button_content">Select Marker</string>
    <string name="select_marker_button">Select Marker</string>
    <string name="select_current_location_button">Select current location</string>
    <string name="search_location_et">Search for a location here</string>
    <string name="location">Location</string>
    <string-array name="categories">
        <item name="General">General</item>
        <item name="Road transport and Lighting">Road transport and Lighting</item>
        <item name="Environmental Issues and Cleanliness">Environmental Issues and Cleanliness</item>
        <item name="Works">Works</item>
        <item name="Maintenance">Maintenance</item>
    </string-array>
    <string-array name="General">
        <item name="Addressing emergencies">Addressing emergencies</item>
        <item name="Autopsy">Autopsy</item>
        <item name="General complains">General complains</item>
        <item name="Complains to the Mayor">Complains to the Mayor</item>
        <item name="Event support">Event support</item>
    </string-array>
    <string-array name="Road_transport_Lighting">
        <item name="Road Labeling">Road Labeling</item>
        <item name="Road Lines">Road Lines</item>
        <item name="Broken Traffic Light">Broken Traffic Light</item>
        <item name="Broken Asphalt">Broken Asphalt</item>
        <item name="Traffic issues">Traffic issues</item>
        <item name="Dissembled Advertising billboard">Dissembled Advertising billboard</item>
        <item name="skimpy Lighting">skimpy Lighting</item>
        <item name="Damaged public lighting">Damaged public lighting</item>
    </string-array>
    <string-array name="Environmental_Issues_Cleanliness">
        <item name="Road Cleanliness">Road Cleanliness</item>
        <item name="Coast Cleansing">Coast Cleansing</item>
        <item name="Builders Cleansing">Builders Cleansing</item>
        <item name="Object Transport">Object Transport</item>
        <item name="Large object disposing">Large object disposing</item>
        <item name="Abandoned vehicles withdrawal">Abandoned vehicles withdrawal</item>
        <item name="Trash bin">Trash bin</item>
        <item name="Recycle bin">Recycle bin</item>
        <item name="Environmental pollution">Environmental pollution</item>
    </string-array>
    <string name="Works" translatable="false">as</string>
    <string-array name="Maintenance">
        <item name="Public Building Maintenance">Public Building Maintenance</item>
        <item name="Playground Maintenance">Playground Maintenance</item>
        <item name="Varnishing of Communal Aerias">Varnishing of Communal Aerias</item>
    </string-array>
    <string name="title_reportpreview_list" translatable="false">Items</string>
    <string name="title_reportpreview_detail" translatable="false">Report Preview Detail</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_review_report">Review Repors</string>
    <string name="action_settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="title_activity_preview_report">Preview Report</string>
    <string name="title_activity_review_reports">Review Reports</string>
    <string name="title_activity_review_detailed">Report\'s Details</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main_screen" translatable="false">MainScreen</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_app_login">Sign in</string>
    <string name="review_closed_button_text">My Reports</string>
    <string name="add_button_text">New Report</string>
    <string name="review_button_text">Locality Reports</string>
    <string name="achievements_button_text">Achievements</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="instructions_bar_title">Instructions</string>
    <string name="instructions_add_title">How to add a report</string>
    <string name="instructions_add">" 1) You have to select your report's kind from the predefined categories.\n    \n  2) Then you have the option to upload an image, in order to make reported the problem to be easily located.\n    \n  3) In this step you have to select the location of the reported object.\n    \n  4) Finally, you have the chance to preview the report that you are about to upload and ensure that the information\n    you have provided are correct."</string>
    <string name="instructions_review_title">How to review reports</string>
    <string name="instructions_review">You have two options to exam uploaded reports. \n \n  1) You can exam the open reports that have not been corrected by the local authority or\n    \n  2) You can exam the closed ones that have been corrected.\n    \n  In any of the above cases, you can take action and up-vote or down-vote the content and interact which\n        other users by commenting in the report.</string>
    <string name="instructions_achievements_title">How to check achievements</string>
    <string name="instructions_achievements">You can monitor your progress of your achievements and the
    progress of the top ones.</string>
    <string name="comment_hint">Enter comment</string>
    <string name="title_activity_achievements">Achievements</string>
    <string name="rank">Rank: </string>
    <string name="score">Score: </string>
    <string name="user">User: </string>
    <string name="locality_reports">Locality Reports</string>
    <string name="app_report_tv_top">Reporting an application bug, problem or enhancement will help up improve ourselves</string>
    <string name="app_report_tv_et">Describe here</string>
    <string name="app_report_bt">submit</string>
</resources>