<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_image_loader"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_gravity="center"
    android:background="@color/grey_main"
    tools:context="com.icsd.municipapp.ImageLoader">

    <TextView

        android:text="@string/image_header_tv"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_height="wrap_content"
        android:id="@+id/image_header_tv"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />


    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/image_header_tv"
        android:layout_marginBottom="30dp"
        android:text="@string/upload_image_tv"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/upload_image_tv"
        />

    <LinearLayout
        android:id="@+id/Linear_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/circle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle_acccent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

            <ImageButton
                android:layout_centerVertical="true"
                android:scaleY="0.9"
                android:id="@+id/album_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/rectangle_borders"
                android:src="@drawable/album_icon"
                android:contentDescription="@string/album_button"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_below="@id/circle1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_tv"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView

                android:id="@+id/circle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle_acccent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>


            <ImageButton
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/camera_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="fitCenter"
                android:src="@drawable/camera_icon_1"
                android:background="@null"
                android:contentDescription="@string/camera_button"
                />

            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/circle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_tv"/>

        </RelativeLayout>






    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear_image2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/Linear_image"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp">






    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Linear_image2"
        android:orientation="vertical">

        <TextView
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:id="@+id/image_skip_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:text="@string/image_skip_tv"
            android:textSize="18sp"
            android:clickable="true"
            />

    </RelativeLayout>


</RelativeLayout>
