<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_main"
    >


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin">



            <TextView
                android:id="@+id/cat_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_category"
                android:textColor="@color/black"
                android:textSize="23sp"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cat_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_borders"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                >

                <EditText
                    android:id="@+id/cat_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    android:clickable="true"
                    android:textColor="@color/black"
                    android:hint="@string/report_category_et_hint">


                </EditText>

            </android.support.design.widget.TextInputLayout>




            <TextView
                android:id="@+id/type_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_type"
                android:textColor="@color/black"
                android:textSize="23sp"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/type_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_borders"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                >

                <EditText
                    android:id="@+id/type_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:textColor="@color/black"

                    android:hint="@string/report_type_et_hint">


                </EditText>

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="23sp"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/description_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_borders"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                >

                <EditText
                    android:id="@+id/description_et"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:hint="@string/description_et_hint">


                </EditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.ButtonBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="15dp"
                android:gravity="end"
                android:weightSum="1">

                <ImageButton
                    android:id="@+id/proceed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_report_button"
                    android:textSize="12sp"
                    android:background="@null"
                    android:scaleX="1.2"
                    android:src="@drawable/proceed"
                    android:textColor="@color/white"
                    android:layout_weight="0.08" />

            </android.support.v7.widget.ButtonBarLayout>

        </LinearLayout>

</ScrollView>