<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/grey_main"
    >

    <TextView
        android:padding="5dp"
        android:textSize="17sp"
        android:text="@string/app_report_tv_top"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:padding="7dp"
        android:background="@drawable/rectangle_borders">

        <EditText
            android:textSize="15sp"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:inputType="textMultiLine"
            android:id="@+id/app_report_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/app_report_tv_et"
            android:textSize="12sp"
            android:labelFor="@id/app_report_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:onClick="onClick"
            android:text="@string/app_report_bt"
            android:id="@+id/submit"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.ButtonBarLayout>

</LinearLayout>